Fixed the width on mobile

--- a/style.css
+++ b/style.css
@@ -14,16 +14,15 @@ main {
 
 h1 {
   font-size: 3rem;
-  text-align: center;
   color: sandybrown;
 }
 
 form {
-  max-width: 100%;
-  margin: auto;
 }
 
 input[type="text"] {
+  width: 300px;
+  max-width: 100%;
   padding: 1rem 2rem;
   font-size: 2rem;
 }
@@ -34,22 +33,24 @@ ul {
   flex-direction: column;
   margin: 0;
   padding: 0;
+  width: 300px;
+  max-width: 100%;
 }
 
 ul > li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  max-width: 100%;
-  padding: 1rem 1rem;
+  padding: 1rem 2rem;
   font-size: 2rem;
   background-color: #e5e5e5;
+  width: 300px;
   border-bottom: 1px solid white;
+  display: flex;
+  align-items: center;
 }
 
 ul > li > p {
   margin: 0;
   padding-left: 20px;
+  text-overflow: ellipsis;
 }
 
 small {
